# UoR-Pallets

./: .gitignore  CMakeLists.txt  SimpleTruck.cpp  SimpleTruck.h  main.cpp
storage/: CargoStorage.cpp  CargoStorage.h  LoadingBay.cpp  LoadingBay.h  pallet.cpp  pallet.h
